[metadata]
name = radicale_bsdauth
# version = # setuptools_scm takes care of this
license = GPL version 3
description = Login to Radicale with your native OpenBSD accounts.
# long_description = file:README.md # TODO

author = kousu
author_email = kousu@kousu.ca

url = https://github.com/kousu/radicale_bsdauth
project_urls = 
  repository = https://github.com/kousu/radicale_bsdauth
  documentation = https://github.com/kousu/radicale_bsdauth/blob/trunk/README.md

keywords = authentication, radicale, caldav, carddav, PIM, plugin


[options]
python_requires = >=3.8
install_requires =
  radicale~=3.0

# src/ layout: # see https://blog.ionelmc.ro/2014/05/25/python-packaging/
packages = find:
package_dir=
    =src

# used with setuptools_scm to mean 'everything tracked by git':
include_package_data = True 

[options.packages.find]
where = src
